--- a/mteb_layer_aggregation/requirements.txt
+++ b/mteb_layer_aggregation/requirements.txt
@@ -4,7 +4,7 @@ transformers>=4.30.0
 datasets>=2.14.0
 mteb>=2.0.0
 sentence-transformers>=2.2.0
-
+lmdb
 # Scientific computing
 numpy>=1.24.0
 scipy>=1.10.0
